--- a/sass/helpers/_mixins.scss
+++ b/sass/helpers/_mixins.scss
@@ -15,3 +15,13 @@
   -webkit-box-shadow: 4px 4px 5px #989898;
   box-shadow:         4px 4px 5px #989898;
 }
+
+@function calculateRem($size) {
+  $remSize: $size / 16px;
+  @return $remSize * 1rem;
+}
+
+@mixin font-size($size) {
+  font-size: $size;
+  font-size: calculateRem($size);
+}
