--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -14,6 +14,7 @@ $lato: 'Lato', sans-serif;
 $orange: #CC6600;
 $grey: #333;
 $lo: #fff7eb;
+$menu: #646464;
 
 /**
  * Text Shadow
@@ -25,3 +26,4 @@ $shadow: 2px 2px 2px #333;
  */
 $line: underline;
 $up: uppercase;
+$low: lowercase;
