--- a/sass/reset.scss
+++ b/sass/reset.scss
@@ -1,3 +1,5 @@
 /* ==========================================================================
-   Custom JS Scripts
+   Reset Styles
    ========================================================================== */
+   
+@import "compass/reset";
