--- a/sass/themes/_admin.scss
+++ b/sass/themes/_admin.scss
@@ -2,7 +2,10 @@
    Admin Theme Styles
    ========================================================================== */
 
-.submitted,
 #block-system-main .comment_forbidden {
 	display:none;
+}
+
+h2.styleguide {
+	text-shadow: none;
 }
