--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,3 @@
-/* ==========================================================================
-   If you prefer not to use SASS/SCSS, you can write your custom css directly here.
-   ========================================================================== */
+/* ===============================================================================
+   If you prefer not to use SASS/SCSS, you can write your custom CSS here.
+   ============================================================================= */
