--- a/sass/components/_tags_date.scss
+++ b/sass/components/_tags_date.scss
@@ -7,14 +7,17 @@
  */
 .field-type-taxonomy-term-reference  {
 	text-transform: $up;
-	font-size: 0.8em;
+	@include font-size(12px);
+	margin-top: 30px;
 		.field-label {
 			color: $grey;
 			background-color: $lo;
 			font-weight: normal;
 			display:inline;
 			float:left;
-			padding: 3px 3px 3px 5px;
+			padding: 3px 3px 3px 8px;
+			border: 1px solid #eee;
+			margin-right: 2px;
 		}
 		.field-item {
 			display: inline;
@@ -27,20 +30,12 @@
 		}
 }
 
-.page-taxonomy {
-	h2 {
-		margin-top: 45px;
-		font-size: 2.0em;
-	}
-
-}
-
 /**
  * Date Styles
  */
 .field-type-datetime {
 	text-transform: $up;
-	font-size: 0.9em;
+	@include font-size(14px);
 	.field-label {
 		display: none;
 	}
@@ -50,5 +45,6 @@
 			float:right;
 			margin-right: 5px;
 			padding: 3px;
+			border: 1px solid #eee;
 	}
 }
