--- a/sass/layout/_posts.scss
+++ b/sass/layout/_posts.scss
@@ -15,9 +15,10 @@
 /**
  * Blockquote
  */
-blockquote {
+blockquote,
+code {
 	background-color: $lo;
-	padding: 5px 20px 20px 20px;
+	padding: 30px 20px 20px 20px;
 	@include border-radius(10px);
 }
 
@@ -28,15 +29,15 @@ blockquote {
 	float:right;
 	display: inline;
 	margin-right: 3px;
-	background-color: $lo;
+	background-color: none;
 	padding: 4px;
-	font-size: 0.8em;
+	@include font-size(12px);
 }
 
 .node-readmore,
 .comment-comments {
 	text-transform: $up;
-	font-size: 0.8em;
+	@include font-size(12px);
 	a:hover {
 		text-decoration: $line;
 	}
