--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -6,7 +6,7 @@
  * Main Menu Styles
  */
 #menu {
-	font-family: $crimson;
+	font-family: $robo;
 	color: $grey;
 	width: 100%;
 	text-align: left;
@@ -18,7 +18,7 @@
 			color: $menu;
 			padding-right: 8px;
 			font-weight: normal;
-			font-family: $crimson;
+			font-family: $robo;
 			text-shadow:none;
 			margin-top: 0px;
 			text-transform: $low;
