--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -5,8 +5,8 @@
 /**
  * Main Fonts
  */
-$crimson: 'Crimson Text', serif;
-$lato: 'Lato', sans-serif;
+$robo: 'Roboto Slab', serif; 
+$med: 'Medula One', cursive; 
 
 /**
  * Main Colors
