--- a/sass/base/_default.scss
+++ b/sass/base/_default.scss
@@ -17,24 +17,27 @@ body {
 	max-width: 765px;
 	margin: 0 auto;
 	overflow-x: hidden;
+	font-family: $robo;
 }
 
 /**
  * Paragraphs
  */
 p {
-	font-family: $crimson;
-	color: $grey;
-	@include font-size(26px);
-	line-height: 32px;
-	margin-bottom: 10px;
+	font-family: $robo;
+	color: #000;
+	@include font-size(27px);
+	line-height: 36px;
+	margin-bottom: 25px;
+	margin-top: 10px;
+	word-break: break-word;
 	a:hover {
 		text-decoration: $line;
 	}
 	&:first-child {
 		&:first-letter {
-			font-family: $crimson;
-			font-size: 55px;
+			font-family: $robo;
+			font-size: 44px;
 			font-weight: bold;
 		}
 	}
@@ -56,9 +59,10 @@ ul {
 } 
  
 li {
+	@include font-size(25px);
 	padding-bottom:10px;
 	list-style-type: disc;
-	line-height: 20px;
+	line-height: 25px;
 }
 
 /* ==========================================================================
@@ -72,7 +76,7 @@ h4,
 h5,
 h6 {
   line-height: 100%;
-  font-family: $lato;
+  font-family: $med;
 	margin-top: 0px;
 	font-weight: normal;
 	color: $grey;
@@ -89,13 +93,24 @@ h2 {
 }
 
 h3 {
-	@include font-size(38px);
-  	margin-bottom: 15px;
-  	text-decoration: none;
+	@include font-size(52px);
+  margin-bottom: 10px;
+  text-decoration: none;
 }
 
 h4 {
-	@include font-size(35px);
+	@include font-size(36px);
+	 margin-bottom: 10px;
+}
+
+h5 {
+	@include font-size(31px);
+	margin-bottom: 10px;
+}
+
+h6 {
+	@include font-size(25px);
+	margin-bottom: 10px;
 }
 
 /**
@@ -150,9 +165,8 @@ input {
  */
 #site-name {
 	margin-bottom: 0px;
-	font-family: $crimson;
-	font-weight: 700;
-	@include font-size(43px);
+	font-family: $med;
+	@include font-size(50px);
 	margin-top: 40px;
 	a {
 		color: $grey;
@@ -167,14 +181,14 @@ input {
  */
 .views-field-title,
 #page-title {
-    text-shadow: $shadow;
+  text-shadow: $shadow;
 	text-align:center;
 	text-transform: $up;
 	margin-top: 0px;
-	@include font-size(46px);
-	line-height: 115%;
+	@include font-size(67px);
+	line-height: 112%;
 	margin-bottom: 25px;
-	font-family: $lato;
+	font-family: $med;
 	color: $orange;
 	clear: both;
 	font-weight: normal;
@@ -183,13 +197,13 @@ input {
 	}
 }
 
-ul#secondary-menu {
+#secondary-menu {
 	padding-left: 0px;
 	li {
 		list-style-type: none;
 		display: inline-block;
-		text-transform: uppercase;
 		margin-right: 10px;
+		@include font-size(15px);
 		&:hover {
 			text-decoration: underline;
 		}
