--- a/sass/components/_comments.scss
+++ b/sass/components/_comments.scss
@@ -4,13 +4,13 @@
 
 .submitted {
 	display: none;
-	font-family: $crimson;
+	font-family: $robo;
 }
 
 #comments {
 	h2 {
 		text-align: center;
-		@include font-size(28px);
+		@include font-size(46px);
 		clear:both;
 		margin-top: 40px;
 		padding-top: 40px;
@@ -29,10 +29,7 @@
 		padding-left: 20px;
 		padding-right: 20px;
 		word-wrap: break-word;
-				&:first-letter {
-			font-weight: normal;
-			@include font-size(16px);
-		}
+		margin-top: 20px;
 	}
 }
 
