--- a/sass/layout/_media.scss
+++ b/sass/layout/_media.scss
@@ -9,31 +9,44 @@ $width-large: 786px;
 @media (max-width: $width-small) {
 
   p {
-    @include font-size(25px);
-    line-height: 32px;
-    padding: 0px 15px 0px 15px;
+    @include font-size(20px);
+    line-height: 30px;
+    padding: 0px 10px 0px 10px;
   }
-
-  p:first-letter {
-    @include font-size(35px);;
+  
+  p {
+		&:first-child {
+			&:first-letter {
+				font-family: $robo;
+				font-size: 35px;
+				font-weight: bold;
+			}
+		}
   }
 
   blockquote {
     margin: 10px;
   }
 
+	.field-content,
+	.views-row,
+	.node-article,
+	.node-posts {
+		margin-bottom: 15%;
+	}
+  
+  ul#secondary-menu {
+		padding-left: 12px;
+	}
+
   .views-field-title,
   .view h2,
   #page-title {
-    @include font-size(38px);
+    @include font-size(52px);
   }
 
   h2 {
-    @include font-size(38px);
-  }
-
-  h3 {
-    @include font-size(28px);
+    @include font-size(52px);
   }
 
   #site-info {
@@ -66,6 +79,10 @@ $width-large: 786px;
   #block-system-main {
     margin-bottom: 50px;
   }
+  
+  .comment ul.links.inline a {
+	  @include font-size(20px);
+  }
 
   .content {
     padding-left: 10px;
@@ -78,6 +95,14 @@ $width-large: 786px;
 
   #block-system-main .comment-comments {
     display: none;
+  }
+  
+  .comment h3 {
+	  @include font-size(35px);
+  }
+  
+  .comment p {
+	  margin-bottom: 10px;
   }
 
   #block-system-main .comment-add {
@@ -94,6 +119,11 @@ $width-large: 786px;
 
   #comments h2.title {
     margin-bottom: 25px;
+  }
+  
+  #comments {
+	  padding-left: 10px;
+	  padding-right: 10px;
   }
 
   input {
